gfx/thebes/DeviceManagerDx.cpp
@@ -783,7 +783,9 @@ DeviceManagerDx::ResetDevices()
   // old and new objects together.
   if (PaintThread::Get()) {
     CompositorBridgeChild* cbc = CompositorBridgeChild::Get();
-    cbc->FlushAsyncPaints();
+    if (cbc) {
+      cbc->FlushAsyncPaints();
+    }
   }
 
   MutexAutoLock lock(mDeviceLock);
